# engram

./: .mcp.json  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
docs/: ALGORITHM_EXTRACTION.md  ARCHITECTURE.md  ASYNC_REFLECTION.md  RESEARCH_DEEP_DIVE.md  RESEARCH_SYNTHESIS.md  (+1 more)
mcp/: COMPREHENSIVE_REVIEW_REPORT.md  Dockerfile  README.md  SECURITY_AUDIT_REPORT.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  server.py  server_stdio.py  start_dev_server.sh  start_stdio_server.sh
mcp/app/: __init__.py  config.py
mcp/app/db/: __init__.py  connection.py
mcp/app/db/migrations/: env.py
mcp/app/db/migrations/versions/: 12ab7a49a243_initial_schema.py  768c8f182893_add_reflection_jobs_table.py  ee60550ba239_restore_memory_indexes.py
mcp/app/models/: __init__.py  memory.py  reflection_job.py  reflection_state.py
mcp/app/services/: __init__.py  embedding.py  ingestion.py  reflection.py  reflection_jobs.py  retrieval.py
mcp/app/tools/: __init__.py  feedback.py  observe.py  reflect.py  reflect_status.py  retrieve.py  retrieve_debug.py  stats.py
mcp/tests/: __init__.py  conftest.py  factories.py
mcp/tests/evals/: __init__.py  eval_deduplication.py  eval_retrieval.py
mcp/tests/fixtures/cassettes/: TestEmbeddingService.test_embed_batch.yaml  TestEmbeddingService.test_embed_preserves_order.yaml  TestEmbeddingService.test_embed_single_text.yaml
mcp/tests/integration/: __init__.py  test_feedback.py  test_ingestion.py  test_retrieval.py
mcp/tests/unit/: __init__.py  test_embedding_service.py  test_models.py
(+13 files in other folders)
